--- a/src/style.css
+++ b/src/style.css
@@ -36,27 +36,7 @@ body {
 }
 
 h1 {
-    font-size: 3.2em;
-    line-height: 1.1;
-}
-
-button {
-    border-radius: 8px;
-    border: 1px solid transparent;
-    padding: 0.6em 1.2em;
-    font-size: 1em;
-    font-weight: 500;
-    font-family: inherit;
-    background-color: #1a1a1a;
-    cursor: pointer;
-    transition: border-color 0.25s;
-}
-button:hover {
-    border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-    outline: 4px auto -webkit-focus-ring-color;
+    @apply text-7xl font-semibold;
 }
 
 .card {
@@ -64,10 +44,10 @@ button:focus-visible {
 }
 
 #app {
-    max-width: 1280px;
+    max-width: 600px;
     margin: 0 auto;
-    padding: 2rem;
     text-align: center;
+    width: 100%;
 }
 
 @media (prefers-color-scheme: light) {
@@ -77,8 +57,5 @@ button:focus-visible {
     }
     a:hover {
         color: #747bff;
-    }
-    button {
-        background-color: #f9f9f9;
     }
 }
