--- a/src/style.css
+++ b/src/style.css
@@ -3,13 +3,13 @@
 @tailwind utilities;
 
 :root {
-    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+    font-family: "Neue Haas Grotesk Display Pro", sans-serif;
     line-height: 1.5;
     font-weight: 400;
 
     color-scheme: light dark;
-    color: rgba(255, 255, 255, 0.87);
-    background-color: #242424;
+    color: black;
+    background-color: white;
 
     font-synthesis: none;
     text-rendering: optimizeLegibility;
@@ -27,6 +27,14 @@ a:hover {
     color: #535bf2;
 }
 
+input {
+    @apply border-none bg-white  focus:border-none focus:shadow-none focus:outline-0 focus:ring-white;
+}
+
+textarea {
+    @apply border-none bg-white  focus:border-none focus:shadow-none focus:outline-0 focus:ring-white;
+}
+
 body {
     margin: 0;
     display: flex;
@@ -39,8 +47,10 @@ h1 {
     @apply text-7xl font-semibold;
 }
 
-.card {
-    padding: 2em;
+.todo-title {
+    font-size: 42px;
+    line-height: 50px;
+    font-weight: 600;
 }
 
 #app {
